# rageval

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Guide.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.cfg  sitemap.xml  test_async.py  update_docs.py
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml
advanced/autoeval/: index.html
advanced/batch/: index.html
advanced/chunks/: index.html
advanced/consistency/: index.html
advanced/drift/: index.html
advanced/mcp/: index.html
advanced/regression/: index.html
advanced/taxonomy/: index.html
advanced/tracing/: index.html
api-reference/: index.html
changelog/: index.html
cicd/: index.html
docs/: api-reference.md  changelog.md  cicd.md  faq.md
docs/advanced/: autoeval.md  batch.md  chunks.md  consistency.md  drift.md  mcp.md  regression.md  taxonomy.md  tracing.md
docs/getting-started/: first-evaluation.md  installation.md  quickstart.md
docs/judges/: anthropic.md  gemini.md  groq.md  heuristic.md  (+3 more)
examples/: advanced_eval.py  basic_eval.py
faq/: index.html
landing/: index.html  script.js  styles.css
launch_assets/: dev_to_article.md  discord_messages.md  show_hn_post.md  twitter_thread.md
rageval/: __init__.py  autoeval.py  chunk_analyzer.py  cli.py  consistency.py  dataset.py  drift.py  explainer.py  mcp_server.py  prompt_vc.py  py.typed  query_classifier.py  taxonomy.py  trace.py  tracker.py
search/: search_index.json
tests/: test_answer_completeness.py  test_autoeval.py  test_chunk_analyzer.py  test_consistency.py  test_context_recall.py  test_contradiction_detector.py  test_dataset.py  test_drift.py  test_explainer.py  test_faithfulness.py  test_noise_sensitivity.py  test_prompt_vc.py  test_query_classifier.py  test_taxonomy.py  test_tracer.py  test_tracker.py
(+59 files in other folders)
